# HedgePy

./: .gitignore  README.md  config.toml  pyproject.toml
src/hedgepy/: .env  __init__.py  __main__.py  api.py  tui.py
src/hedgepy/bases/: TUI.py  api.py  database.py  vendor.py
src/hedgepy/client/: __main__.py  bases.py  bridge.py  client.py  launch.py
src/hedgepy/common/: API.py  cli.py  data.py  database.py  environment.py  io.py  parse.py  template.py  vendor.py
src/hedgepy/common/api/: API.py  http.py  vendor.py
src/hedgepy/common/api/bases/: API.py
src/hedgepy/common/bases/: API.py  Consumer.py  Data.py
src/hedgepy/common/utils/: config.py  dtwrapper.py  logger.py
src/hedgepy/common/vendors/edgar/: __init__.py  edgar.py
src/hedgepy/common/vendors/fred/: __init__.py  fred.py
src/hedgepy/common/vendors/ibkr/: __init__.py  bases.py  ibkr.py  impl.py  impl_old.py  old__init__.py
src/hedgepy/server/: __main__.py  bases.py  init.py  instance.py  parse.py  process.py  query.py  route.py  run.py  server.py
src/hedgepy/server/bases/: Agent.py  Data.py  Database.py  Schedule.py  Server.py
src/hedgepy/server/routines/: __init__.py  dbinit.py  diff.py  init.py  parse.py  plan.py  process.py
src/hedgepy/templates/: _schema.json
src/hedgepy/vendors/: common.py
src/hedgepy/vendors/edgar/: __init__.py  edgar.py
src/hedgepy/vendors/fred/: __init__.py  fred.py
src/hedgepy/vendors/ibkr/: __init__.py  ibkr.py
templates/: _schema.json  ibkr-hist.json
